bug with not showing data in edit menu name field and price field on small screens fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -651,6 +651,6 @@ body {
     }
     .editor-form__main input{
         flex: 0 0 100%;
-    
+        width: 100%;
     }
 }
